test/spec_vectors/simd_i32x4_arith/fail/module_10.wat
(module (func $i32x4.mul-1st-arg-empty (result v128) (i32x4.mul (v128.const i32x4 0 0 0 0))))